--- a/ScalaTemplate.ipynb
+++ b/ScalaTemplate.ipynb
@@ -7,7 +7,7 @@
             "version": "0.3.2",
             "provenance": [
                 {
-                    "file_id": "https://gist.github.com/shadaj/aaac98b690cfeb0cbd891bfe3ce5725d#file-scala-in-colab-template-ipynb",
+                    "file_id": "https://github.com/langley/colaboratory/blob/master/ScalaTemplate.ipynb",
                     "timestamp": 1555773591368
                 }
             ],
@@ -15,8 +15,8 @@
             "toc_visible": true
         },
         "kernelspec": {
-            "name": "python3",
-            "display_name": "Python 3"
+            "name": "scala",
+            "display_name": "scala"
         }
     },
     "cells": [
@@ -28,7 +28,7 @@
             "cell_type": "markdown",
             "source": [
                 "# Scala in Colab\n",
-                "## BEFORE YOU BEGIN: [install Scala support](https://colab.research.google.com/gist/shadaj/323ad2393b46c1b71df435728a052c24/install-scala-in-colab.ipynb) into your Collab environment"
+                "## BEFORE YOU BEGIN: [install Scala support](https://github.com/langley/colaboratory/blob/master/ScalaTemplate.ipynb) into your Collab environment"
             ]
         },
         {
